--- a/Person.Api/appsettings.json
+++ b/Person.Api/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings":{
-    "DataContext":"Server= .\\SQLEXPRESS; Database= PersonApiTodo; Integrated Security= True;"
+    "DataContext":"Server=localhost;Database=PersonDB;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
